--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<meta>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta name="description" content="Tarun Chhabria Frontend 1 AccioJob 24 December 2022">
     <title>Tarun Chhabria Frontend 1 AccioJob 24 December 2022</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" ></meta>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/58791bafa0.js" crossorigin="anonymous"></script>
